# ad-analyzing-agent

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  alembic.ini  docker-compose.yml  fly.toml  gene_pool_seed.json  pyproject.toml  schema.sql
.github/workflows/: daily-report.yml  deploy-fly.yml  deploy-reports.yml  weekly-report.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_gene_pool_metadata_source.py  003_auth_tables.py  004_magic_links_consumed.py  005_user_meta_connections.py  006_campaign_owner.py  007_usage_log.py  008_migrate_legacy_campaigns.py  009_per_user_meta_tenancy.py  010_approval_queue_actions.py  011_budget_check_constraints.py  012_data_deletion_requests.py  013_beta_signups.py  014_campaign_public_showcase.py  015_variant_media_type.py  016_variant_source.py  017_campaign_objective.py  018_action_type_queue_for_approval.py
docs/: cost-scaling.md
frontend/: .gitignore  index.html  openapi.json  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vercel.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  router.tsx
public/: index.html
public/daily/: 2026-04-06.html  2026-04-07.html  2026-04-08.html  2026-04-09.html  2026-04-10.html
public/weekly/: 2026-W14.html
src/: config.py  exceptions.py  main.py
src/adapters/: base.py  google_ads.py  meta.py  meta_factory.py  meta_objective.py  mock.py
src/agents/: analyst.py  copywriter.py  generator.py  tweet_writer.py
src/dashboard/: app.py  auth.py  crypto.py  deps.py  meta_oauth.py  (+2 more)
tests/: conftest.py  factories.py
(+156 files in other folders)
