[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ad-creative-agent"
version = "0.1.0"
description = "Multi-agent system for recursive ad creative testing and optimization"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29,<1.0",
    "alembic>=1.13,<2.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "httpx>=0.27,<1.0",
    "anthropic>=0.39,<1.0",
    "click>=8.1,<9.0",
    "facebook-business>=19.0,<21.0",
    "google-ads>=24.0,<26.0",
    "scipy>=1.12,<2.0",
    "numpy>=1.26,<3.0",
    "jinja2>=3.1,<4.0",
    "weasyprint>=62,<64",
    "python-dotenv>=1.0,<2.0",
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.29,<1.0",
    "python-multipart>=0.0.9,<1.0",
    "slowapi>=0.1.9,<1.0",
    "cryptography>=42,<47",
    "authlib>=1.3,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-cov>=5.0,<6.0",
    "ruff>=0.5,<1.0",
    "factory-boy>=3.3,<4.0",
]

[project.scripts]
adagent = "src.main:cli"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-xvs"

[tool.ruff.format]
quote-style = "double"
